--- a/README
+++ b/README
@@ -16,3 +16,37 @@ npm install promise-polyfill --save-exact
 
 
 npm install
+
+Environment:
+
+
+cli packages: (/usr/local/lib/node_modules)
+
+    @ionic/cli-utils  : 1.18.0
+    ionic (Ionic CLI) : 3.18.0
+
+global packages:
+
+    cordova (Cordova CLI) : 7.0.1 
+    Gulp CLI              : CLI version 3.9.1 Local version 3.9.1
+
+local packages:
+
+    @ionic/app-scripts : 1.3.12
+    Cordova Platforms  : android 6.4.0
+    Ionic Framework    : ionic-angular 3.2.1
+
+System:
+
+    Android SDK Tools : 25.2.5
+    Node              : v7.0.0
+    npm               : 3.10.8 
+    OS                : Linux 4.4
+
+Environment Variables:
+
+    ANDROID_HOME : /home/lucas/Android/Sdk
+
+Misc:
+
+    backend : legacy
